# python_tutorials

./: .flake8  README.md  pyproject.toml
tutorials/llm1/: answer1.txt  makemore_part1_bigrams.ipynb
tutorials/llm1/1/: bigrams.ipynb  notebook.sh  readme.txt
tutorials/parallelization/py_par_summer_2025/code/: get_n_cores.py  lin_alg.py  my_pool.py  numba_par.py  numba_pi.py  par_pandas_dask.py  pool_basics.py  rcs_timer.py
tutorials/parallelization/py_par_summer_2025/code/__pycache__/: numba_pi.calc_pi_numba-72.py310.1.nbc  numba_pi.calc_pi_numba-72.py310.nbi
tutorials/parallelization/py_par_summer_2025/code/extra/: my_pool_solved.py  my_pool_solved_dask.py  procs_and_pipes.py  recursive_multiprocessing.py
