[tool.poetry]
name = "python-tutorials"
version = "0.1.0"
description = "The repo related to python tutorial"
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{include = "python_tutorials"}]

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
